syntax = "proto3";

package medic;
option go_package = "./Proto";

message ShareInfo{
    int64 share = 1;
    string name = 2;
}
message Reply{
    string status = 1;
}

message PersonalInfo {
    string name = 1;
    int64 first = 2;
    int64 second = 3;
    int64 third = 4; 

}

message ServerResponse {
    bool success = 1;
}

service person{
    rpc Share(ShareInfo) returns (Reply) {}
    
}

service hospital{
    rpc SendPersonalInfo(PersonalInfo) returns (ServerResponse);
}

